# dmamu

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Procfile  create_superuser.py  docker-compose.yml  entrypoint.sh  main.py  manage.py  nixpacks.toml  pyproject.toml
backend/accounts/: models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  verification.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_initial.py  0002_user_company.py  0003_alter_phonenumber_user.py  0004_alter_user_company.py  0004_delete_profile.py  0004_profile_country.py  0005_profile.py
backend/analytics/: urls.py  utils.py  views.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/crm/: permissions.py  serializers.py  utils.py  views.py
backend/finance/: apps.py  models.py  serializers.py  urls.py  views.py
backend/habsify/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/home/: urls.py  views.py
backend/inventory/: models.py  serializers.py  signals.py  urls.py  views.py
backend/notifications/: apps.py  filters.py  models.py  serializers.py  tasks.py  views.py
backend/sales_purchases/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/subscriptions/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/supplier/: serializers.py
backend/suppliers/: models.py  pagination.py  serializers.py  utils.py  views.py
backend/tasks/: apps.py  serializers.py  tasks.py  urls.py  views.py
(+82 files in other folders)
